# tauri-angular-nasa-pics

./: .gitignore  README.md  angular.json  package-lock.json  package.json
src/: index.html  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs  mongo_commands.rs  util_commands.rs
src-tauri/src/http/: http_functions.rs  mod.rs
src-tauri/src/models/: album_model.rs  mod.rs  rover_model.rs  user_model.rs
src-tauri/src/repository/: mod.rs  mongo_repository.rs
src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
src/app/about/: about.component.css  about.component.html  about.component.ts
src/app/alerts/: alerts.ts
src/app/app-routing/: app-routing.module.ts
src/app/confirm/: confirm.component.html  confirm.component.ts
src/app/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.ts
src/app/guards/: auth.guard.ts
src/app/landing/: landing.component.css  landing.component.html  landing.component.ts
src/app/login/: login.component.html  login.component.ts
src/app/navbar/: navbar.component.css  navbar.component.html  navbar.component.ts
src/app/profile/: profile.component.html  profile.component.ts
src/app/register/: register.component.css  register.component.html  register.component.ts
src/app/search/: search.component.css  search.component.html  search.component.ts
src/app/service/: mongo.service.ts  nasa-rover.service.ts  supa-auth.service.ts
