[package]
name = "tauri-test-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "fs-all", "dialog-save", "notification-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.31"
reqwest = { version = "0.11", features = ["blocking", "json"] }
dotenv = "0.15.0"
futures-util = "0.3.29"
futures = "0.3.30"
once_cell = "1.8.0"
mongodb = "2.8.0"
tokio = { version = "1.0.0", features = ["full"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
